# yagmcp

./: .gitignore  LICENSE  PLUGIN_INTEGRATION_SUMMARY.md  README.md
.github/workflows/: release.yml  test.yml
deploy/: .env.template  docker-compose.nas.yml  docker-compose.standalone.yml  docker-compose.yml
openwebui/: README.md  yagmcp_tool.py
plugin/: Module.manifest  build.gradle  extension.properties  settings.gradle
plugin/src/main/java/ghidraassist/: ChangeTracker.java  GhidraAssistClient.java  GhidraAssistContextTracker.java  GhidraAssistPlugin.java  GhidraAssistProvider.java  GhidraAssistSettings.java
scripts/: build-plugin.sh  build-server.sh  dev-server.sh  install-plugin.sh  test-connection.sh
server/: Dockerfile  pyproject.toml  pytest.ini
server/src/ghidra_assist/: __init__.py  chat_agent.py  config.py  ghidra_bridge.py  main.py  project_cache.py
server/src/ghidra_assist/prompts/: __init__.py  analyze_function.py  malware_classify.py  rename_suggestions.py  vulnerability_scan.py
server/src/ghidra_assist/resources/: __init__.py  program_info.py
server/src/ghidra_assist/tools/: __init__.py  anti_analysis.py  base.py  binary_compare.py  call_graph.py  chat.py  comments.py  data_types.py  functions.py  ioc_extract.py  modifications.py  pattern_detector.py  programs.py  string_tracker.py  strings.py  triage.py  type_inference.py  xrefs.py  yara_gen.py
server/tests/: README.md  __init__.py  conftest.py  test_analysis_tools.py  test_ghidra_bridge.py  test_malware_tools.py  test_modification_tools.py  test_tools.py
(+5 files in other folders)
