[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Configuration for uv package manager
# Use locked dependencies from uv.lock for reproducible builds
managed = true

[project]
name = "ghidra-assist"
version = "0.1.0"
description = "YAGMCP — Headless Ghidra MCP server for LLM-assisted reverse engineering"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
    "starlette>=0.46.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "pyghidra>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
]